--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ bottom:0px;
   } 
 
   .card{
-    margin:0px 20px;
+    margin:0;
 }
   
   .name{
@@ -97,7 +97,6 @@ bottom:0px;
    
    </div>
     </div>  
-  <br>
 <div class="card">
   <div class="images">
   <img src="http://i.imgur.com/WKLhqF2.jpg" style="height:100%;">
@@ -114,7 +113,7 @@ bottom:0px;
   
 				<br>
 				</div></div>
- 
+ <br><br><br><br>
             
 </body>
 
