--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ bottom:0px;
   <div style="text-align:center;background:white;padding:0px 70px;"><br>
   <h3>King or Double</h3><h4>TV / Micro-wave / Fridge / Coin Laundry / Wi-Fi / Coffee / Free Parking / Keyless Entry Card / No pets allowed<br>
   <h5>
- $50 plus a $5 deposit for one night <br><br>
-  $180 plus a $20 deposit for the week <br><br>
+ $44.95 plus tax & deposit for one night <br><br>
+  $160 plus tax & deposit for the week <br><br>
   Variable rates depending upon your needs<br><br>
   Check-In 3pm | Check-Out 11am
     </h5>
